0.4.0 Fix 1
Signed-off-by: Vadim <vadim.rasskazow@gmail.com>